OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_CC_Flag__c.field-meta.xml
<CustomField>
    <fullName>POE_CC_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the opportunity was flagged for a Cross Credit fraud rule.</description>
    <label>Cross Credit Flag</label>
    <type>Checkbox</type>
</CustomField>