OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_CC_LastName__c.field-meta.xml
<CustomField>
    <fullName>POE_CC_LastName__c</fullName>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>