OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_CC_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>POE_CC_Zipcode__c</fullName>
    <label>Zip Code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>