OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Clicker_Event_Track__c.field-meta.xml
<CustomField>
    <fullName>POE_Clicker_Event_Track__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clicker Event Track</label>
    <referenceTo>POE_Clicker_Event_Track__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>