OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Clicker_Origin__c.field-meta.xml
<CustomField>
    <fullName>POE_Clicker_Origin__c</fullName>
    <label>Clicker Origin</label>
    <length>30</length>
    <type>Text</type>
</CustomField>