OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>POE_Contract_Expiration_Date__c</fullName>
    <label>Contract Expiration</label>
    <type>Date</type>
</CustomField>