OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>POE_Credit_Card__c</fullName>
    <description>Temporary stores encrypted CC data [PER-3161].</description>
    <label>Credit Card</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>