OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Credit_Card_Name__c.field-meta.xml
<CustomField>
    <fullName>POE_Credit_Card_Name__c</fullName>
    <label>Credit Card Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>