OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Credit_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>POE_Credit_Risk_Score__c</fullName>
    <description>Credit Risk Score returned from the credit check response of API buyflows</description>
    <label>Credit Risk Score</label>
    <length>50</length>
    <type>Text</type>
</CustomField>