OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_CreditFreeze__c.field-meta.xml
<CustomField>
    <fullName>POE_CreditFreeze__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Freeze</label>
    <type>Checkbox</type>
</CustomField>