OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Cross_Sale__c.field-meta.xml
<CustomField>
    <fullName>POE_Cross_Sale__c</fullName>
    <formula>IF(AND(POE_ParentOpportunity__c != null,  POE_ParentOpportunity__r.POE_Program__c != POE_Program__c,   ISPICKVAL(POE_ParentOpportunity__r.StageName, &apos;Order Created&apos;)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cross Sale</label>
    <type>Checkbox</type>
</CustomField>