OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Current_Internet_Speed__c.field-meta.xml
<CustomField>
    <fullName>POE_Current_Internet_Speed__c</fullName>
    <label>Existing Broadband</label>
    <length>100</length>
    <type>Text</type>
</CustomField>