OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Current_VoIP__c.field-meta.xml
<CustomField>
    <fullName>POE_Current_VoIP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current VoIP</label>
    <type>Checkbox</type>
</CustomField>