OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Current_Wireless_Customer__c.field-meta.xml
<CustomField>
    <fullName>POE_Current_Wireless_Customer__c</fullName>
    <label>Existing Wireless</label>
    <length>25</length>
    <type>Text</type>
</CustomField>