OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>POE_Customer_Name__c</fullName>
    <formula>IF( ISBLANK( Account.Name ) ,  Account.PersonContact.FirstName + &apos; &apos; + Account.PersonContact.LastName,Account.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>