OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Decision_Maker_Name__c.field-meta.xml
<CustomField>
    <fullName>POE_Decision_Maker_Name__c</fullName>
    <label>Decision Maker Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>