OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Decision_Maker_Phone__c.field-meta.xml
<CustomField>
    <fullName>POE_Decision_Maker_Phone__c</fullName>
    <description>Phone number of the Decision Maker indicated in the disposition [PER-4044]</description>
    <label>Decision Maker Phone</label>
    <type>Phone</type>
</CustomField>