OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Driver_s_License_Number__c.field-meta.xml
<CustomField>
    <fullName>POE_Driver_s_License_Number__c</fullName>
    <label>Driver&apos;s License Number</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>