OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_DTV_Program_Selected__c.field-meta.xml
<CustomField>
    <fullName>POE_DTV_Program_Selected__c</fullName>
    <label>DTV Program Selected</label>
    <length>40</length>
    <type>Text</type>
</CustomField>