OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Eligible_Self_Install__c.field-meta.xml
<CustomField>
    <fullName>POE_Eligible_Self_Install__c</fullName>
    <label>Eligible Self Install</label>
    <length>255</length>
    <type>Text</type>
</CustomField>