OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Existing_Video__c.field-meta.xml
<CustomField>
    <fullName>POE_Existing_Video__c</fullName>
    <label>Existing Video</label>
    <length>25</length>
    <type>Text</type>
</CustomField>