OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_External_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>POE_External_Lead_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Lead ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>