OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Fraud_Flag_IP__c.field-meta.xml
<CustomField>
    <fullName>POE_Fraud_Flag_IP__c</fullName>
    <label>Fraud Flag IP</label>
    <length>25</length>
    <type>Text</type>
</CustomField>