OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_FraudObservation__c.field-meta.xml
<CustomField>
    <fullName>POE_FraudObservation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that indicates when an opportunity was flagged for Security Reasons.</description>
    <label>Fraud Observation Flag</label>
    <type>Checkbox</type>
</CustomField>