OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Identification_Method__c.field-meta.xml
<CustomField>
    <fullName>POE_Identification_Method__c</fullName>
    <label>Identification Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driver&apos;s License</fullName>
            </value>
            <value>
                <fullName>Opted Out</fullName>
            </value>
            <value>
                <fullName>Social Security Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>