OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_New_Product_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>POE_New_Product_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Product Opportunity</label>
    <type>Checkbox</type>
</CustomField>