OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Number_Of_Knocks__c.field-meta.xml
<CustomField>
    <fullName>POE_Number_Of_Knocks__c</fullName>
    <label>Number Of Knocks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>