OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Outcome__c.field-meta.xml
<CustomField>
    <fullName>POE_Outcome__c</fullName>
    <description>This field stores de outcome for the disposition</description>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Address Does Not Exist</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Competitor Contract</fullName>
            </value>
            <value>
                <fullName>Credit Card Declined</fullName>
            </value>
            <value>
                <fullName>Customer Changed Mind</fullName>
            </value>
            <value>
                <fullName>DNK/DNC Request</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Failed Credit</fullName>
            </value>
            <value>
                <fullName>Install Date</fullName>
            </value>
            <value>
                <fullName>Language Barrier</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>No SSN</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Past Due Balance</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>