OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Outcome_Notes__c.field-meta.xml
<CustomField>
    <fullName>POE_Outcome_Notes__c</fullName>
    <label>Outcome Notes</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>