OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_ParentOpportunity__c.field-meta.xml
<CustomField>
    <fullName>POE_ParentOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>