OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Payment_Limit_Reached__c.field-meta.xml
<CustomField>
    <fullName>POE_Payment_Limit_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Limit Reached</label>
    <type>Checkbox</type>
</CustomField>