OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Previous_Disposition__c.field-meta.xml
<CustomField>
    <fullName>POE_Previous_Disposition__c</fullName>
    <label>Previous Disposition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>