OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Program__c.field-meta.xml
<CustomField>
    <fullName>POE_Program__c</fullName>
    <label>Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>