OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_QuantityOfAttempts__c.field-meta.xml
<CustomField>
    <fullName>POE_QuantityOfAttempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Payment attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>