OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>POE_Reference_Number__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>Reference Number</label>
    <type>AutoNumber</type>
</CustomField>