OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Sensitive_Data__c.field-meta.xml
<CustomField>
    <fullName>POE_Sensitive_Data__c</fullName>
    <description>Temporary stores encrypted sensitive data [PER-3372].</description>
    <label>Sensitive Data</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>