OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Ssn__c.field-meta.xml
<CustomField>
    <fullName>POE_Ssn__c</fullName>
    <label>SSN</label>
    <length>9</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>