OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_SSN_Agreement__c.field-meta.xml
<CustomField>
    <fullName>POE_SSN_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSN Agreement</label>
    <type>Checkbox</type>
</CustomField>