OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Technology_Type__c.field-meta.xml
<CustomField>
    <fullName>POE_Technology_Type__c</fullName>
    <label>Technology Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>