OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Terms_and_Conditions_Accepted__c.field-meta.xml
<CustomField>
    <fullName>POE_Terms_and_Conditions_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Terms &amp; Conditions public page and POETermsAndConditionsController to store user T&amp;C confirmation. (PER-3261)</description>
    <label>Terms and Conditions Accepted</label>
    <type>Checkbox</type>
</CustomField>