OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_TPV_Verified__c.field-meta.xml
<CustomField>
    <fullName>POE_TPV_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TPV Verified</label>
    <type>Checkbox</type>
</CustomField>