OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Primary_Business_EE__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business_EE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Business- EE</label>
    <type>Checkbox</type>
</CustomField>