OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Prior_Year_Gross_Activations__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Gross_Activations__c</fullName>
    <label>Prior Year Gross Activations</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>