OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Program_Base_App_Selection__c.field-meta.xml
<CustomField>
    <fullName>Program_Base_App_Selection__c</fullName>
    <label>Program Base App Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program Base Application - with Chuzo</fullName>
            </value>
            <value>
                <fullName>Program Base Application - without Chuzo</fullName>
            </value>
            <value>
                <fullName>Program Base Application - with Chuzo (No Personal Guarantee)</fullName>
            </value>
            <value>
                <fullName>Base Application - Infrastructure</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>