OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Program_Division__c.field-meta.xml
<CustomField>
    <fullName>Program_Division__c</fullName>
    <formula>text( Account.Division__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Division</label>
    <type>Text</type>
</CustomField>