OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Program_Status__c.field-meta.xml
<CustomField>
    <fullName>Program_Status__c</fullName>
    <description>Status of each program - Dependent on program selection</description>
    <label>Program Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Program_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Account Built In Axapta</fullName>
                <color>#0B6FCE</color>
                <label>Account Built In Axapta</label>
            </value>
            <value>
                <fullName>Account Setup</fullName>
                <color>#78C953</color>
                <label>Account Setup</label>
            </value>
            <value>
                <fullName>Application/Business Plan Forwarded to Exede</fullName>
                <color>#E27001</color>
                <label>Application/Business Plan Forwarded to Viasat</label>
            </value>
            <value>
                <fullName>Application/Business Plan Forwarded to Hughes</fullName>
                <color>#A845DC</color>
                <label>Application/Business Plan Forwarded to Hughes</label>
            </value>
            <value>
                <fullName>Application/Business Plan Received</fullName>
                <color>#F3D904</color>
                <label>Application/Business Plan Received</label>
            </value>
            <value>
                <fullName>Application Denied</fullName>
                <color>#A53711</color>
                <label>Application Denied</label>
            </value>
            <value>
                <fullName>Application Started</fullName>
                <color>#66E9BD</color>
                <label>Application Started</label>
            </value>
            <value>
                <fullName>Application Started Not Submitted</fullName>
                <color>#0B24BE</color>
                <label>Application Started Not Submitted</label>
            </value>
            <value>
                <fullName>Awaiting Installation Training</fullName>
                <color>#419249</color>
                <label>Awaiting Installation Training</label>
            </value>
            <value>
                <fullName>Business Plan Approved</fullName>
                <color>#B6E32E</color>
                <label>Business Plan Approved</label>
            </value>
            <value>
                <fullName>Business Plan Submitted</fullName>
                <color>#641CCF</color>
                <label>Business Plan Submitted</label>
            </value>
            <value>
                <fullName>COM App - Approved</fullName>
                <color>#F96FB7</color>
                <label>COM App - Approved</label>
            </value>
            <value>
                <fullName>COM App - Denied</fullName>
                <color>#2F5D85</color>
                <label>COM App - Denied</label>
            </value>
            <value>
                <fullName>COM App - Incomplete</fullName>
                <color>#AFCADF</color>
                <label>COM App - Incomplete</label>
            </value>
            <value>
                <fullName>COM App - In Process</fullName>
                <color>#8F6429</color>
                <label>COM App - In Process</label>
            </value>
            <value>
                <fullName>COM App - Pending Incomplete</fullName>
                <color>#EFAE73</color>
                <label>COM App - Pending Incomplete</label>
            </value>
            <value>
                <fullName>COM App - Reset</fullName>
                <color>#57F17C</color>
                <label>COM App - Reset</label>
            </value>
            <value>
                <fullName>COM App - Submitted</fullName>
                <color>#0B6FCE</color>
                <label>COM App - Submitted</label>
            </value>
            <value>
                <fullName>COM Prescreen -  Approved</fullName>
                <color>#78C953</color>
                <label>COM Prescreen -  Approved</label>
            </value>
            <value>
                <fullName>COM Prescreen -  Denied</fullName>
                <color>#E27001</color>
                <label>COM Prescreen -  Denied</label>
            </value>
            <value>
                <fullName>COM Prescreen -  Incomplete</fullName>
                <color>#A845DC</color>
                <label>COM Prescreen -  Incomplete</label>
            </value>
            <value>
                <fullName>COM Prescreen - In Process</fullName>
                <color>#F3D904</color>
                <label>COM Prescreen - In Process</label>
            </value>
            <value>
                <fullName>COM Prescreen -  Reset</fullName>
                <color>#A53711</color>
                <label>COM Prescreen -  Reset</label>
            </value>
            <value>
                <fullName>COM Prescreen - Submitted</fullName>
                <color>#66E9BD</color>
                <label>COM Prescreen - Submitted</label>
            </value>
            <value>
                <fullName>D2Lite - Approved</fullName>
                <color>#0B24BE</color>
                <label>D2Lite - Approved</label>
            </value>
            <value>
                <fullName>D2Lite - ASM approved/App in Process</fullName>
                <color>#419249</color>
                <label>D2Lite - ASM approved/App in Process</label>
            </value>
            <value>
                <fullName>D2Lite - Awaiting ASM Approval</fullName>
                <color>#B6E32E</color>
                <label>D2Lite - Awaiting ASM Approval</label>
            </value>
            <value>
                <fullName>D2Lite - Awaiting Buydown</fullName>
                <color>#641CCF</color>
                <label>D2Lite - Awaiting Buydown</label>
            </value>
            <value>
                <fullName>D2Lite - Qualified</fullName>
                <color>#F96FB7</color>
                <label>D2Lite - Qualified</label>
            </value>
            <value>
                <fullName>Exede SI Setup</fullName>
                <color>#8F6429</color>
                <label>Viasat SI Setup</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>