OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Brightspeed</fullName>
            </value>
            <value>
                <fullName>Brinks</fullName>
            </value>
            <value>
                <fullName>Chuzo</fullName>
            </value>
            <value>
                <fullName>Chuzo Shop Link</fullName>
            </value>
            <value>
                <fullName>DTV-COM</fullName>
            </value>
            <value>
                <fullName>DTV-MDU</fullName>
            </value>
            <value>
                <fullName>EarthLink</fullName>
                <color>#FF6600</color>
                <label>EarthLink</label>
            </value>
            <value>
                <fullName>Frontier</fullName>
                <color>#CC0000</color>
                <label>Frontier</label>
            </value>
            <value>
                <fullName>MSA</fullName>
                <color>#0B24BE</color>
                <label>MDP</label>
            </value>
            <value>
                <fullName>MDP D2D</fullName>
                <color>#0B24BE</color>
                <label>MDP D2D</label>
            </value>
            <value>
                <fullName>MDP - ISP</fullName>
                <color>#0B24BE</color>
                <label>MDP - ISP</label>
            </value>
            <value>
                <fullName>National Retail</fullName>
                <color>#0B24BE</color>
                <label>MDP National Retail</label>
            </value>
            <value>
                <fullName>MSO - C</fullName>
            </value>
            <value>
                <fullName>MSOS - P10</fullName>
                <label>MSO-S</label>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>NDA/Program Base App</fullName>
            </value>
            <value>
                <fullName>New Customer Application (WIRE)</fullName>
            </value>
            <value>
                <fullName>New Dealer Base Application (DOM)</fullName>
            </value>
            <value>
                <fullName>Offshore</fullName>
            </value>
            <value>
                <fullName>Optimum</fullName>
            </value>
            <value>
                <fullName>SafeHaven</fullName>
            </value>
            <value>
                <fullName>Security Lead Referral</fullName>
            </value>
            <value>
                <fullName>Spectrum</fullName>
            </value>
            <value>
                <fullName>Spectrum Commercial</fullName>
            </value>
            <value>
                <fullName>T-Mobile</fullName>
            </value>
            <value>
                <fullName>T-Mobile FFL</fullName>
            </value>
            <value>
                <fullName>Verizon D2D/COM</fullName>
            </value>
            <value>
                <fullName>Verizon D2D/RES</fullName>
            </value>
            <value>
                <fullName>Viasat</fullName>
                <color>#F3D904</color>
                <label>Viasat</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>