OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/PVM_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>PVM_Application_Status__c</fullName>
    <description>This is the paperwork status for the PVM opportunities for an account.</description>
    <label>PV Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PVM_Application_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Request paperwork from Account Compliance</fullName>
            </value>
            <value>
                <fullName>Paperwork Sent</fullName>
            </value>
            <value>
                <fullName>Paperwork Incomplete - Attempt 1</fullName>
            </value>
            <value>
                <fullName>Paperwork Incomplete - Attempt 2</fullName>
            </value>
            <value>
                <fullName>Paperwork Incomplete - Attempt 3 - Back to Sales Rep</fullName>
            </value>
            <value>
                <fullName>Paperwork Received - Not Reviewed</fullName>
            </value>
            <value>
                <fullName>Pending CC Charge - A/R</fullName>
            </value>
            <value>
                <fullName>Under Review - Net Terms</fullName>
            </value>
            <value>
                <fullName>Under Review - Account Compliance</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Pending Compliance</fullName>
            </value>
            <value>
                <fullName>Account Setup</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>