OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/PVM_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>PVM_Application_Type__c</fullName>
    <description>Application type for PVM customer</description>
    <inlineHelpText>This selection will determine the paperwork needed to be submitted.</inlineHelpText>
    <label>PV Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prepaid Wire</fullName>
            </value>
            <value>
                <fullName>CC Terms</fullName>
            </value>
            <value>
                <fullName>Net Terms</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>