OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/PVM_Paperwork_Completed__c.field-meta.xml
<CustomField>
    <fullName>PVM_Paperwork_Completed__c</fullName>
    <description>What PVM paperwork has been completed?</description>
    <inlineHelpText>What PVM paperwork has been completed?</inlineHelpText>
    <label>PV Paperwork Completed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>PVM_Application_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>App for Dealer Status</fullName>
            </value>
            <value>
                <fullName>Bank &amp; Trade Info</fullName>
            </value>
            <value>
                <fullName>Business License</fullName>
            </value>
            <value>
                <fullName>Certificate of Insurance</fullName>
            </value>
            <value>
                <fullName>Copy of Credit/Debit Card</fullName>
            </value>
            <value>
                <fullName>Copy of Driver&apos;s License</fullName>
            </value>
            <value>
                <fullName>Credit/Debit Card Auth</fullName>
            </value>
            <value>
                <fullName>Personal Guaranty</fullName>
            </value>
            <value>
                <fullName>Resale Certificate</fullName>
            </value>
            <value>
                <fullName>Terms &amp; Conditions</fullName>
            </value>
            <value>
                <fullName>W-9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>