OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>